# lib

./: .gitignore  .version  CMakeLists.txt  README.md
cmake/: version.cmake
cmake/FleCSI-SP/: FleCSISPConfig.cmake.in  exodusii.cmake
data/mesh/1d/: mesh1d-8.msh
data/mesh/2d/: mesh2d-32x32.mat0.reg  mesh2d-32x32.mat1.reg  mesh2d-8x8.bnd2  mesh2d-8x8.bnd4  mesh2d-8x8.mat2  mesh2d-8x8.x3d
data/mesh/3d/: mesh3d-2x2x2.msh  mesh3d-2x2x2.x3d  mesh3d-30x30x30.exo  mesh3d-4x4x4.x3d  mesh3d-8x8x8.exo  mesh3d-8x8x8.mat2  mesh3d-8x8x8.x3d
doc/doxygen/: common.conf  conf.in  customdoxygen.css  mainpage.md  user.conf.in
doc/sphinx/: conf.py.in  index.rst
doc/sphinx/src/: api.rst  build.rst  models.rst  orientation.rst
doc/sphinx/src/models/: hex.tikz  quad.tikz  tet.tikz
doc/sphinx/src/orientation/: quads.tikz
flsp/: CMakeLists.txt  config.hh.in
flsp/topo/: CMakeLists.txt
flsp/topo/unstructured/: CMakeLists.txt  config.hh  models.hh
flsp/topo/unstructured/clr/: coloring_functors.hh  coloring_utils.hh
flsp/topo/unstructured/clr/test/: mesh.cc  mesh.hh
flsp/topo/unstructured/io/: definition_base.hh  exodus_definition.hh  models.hh  simple_definition.hh  types.hh  x3d_definition.cc  x3d_definition.hh
flsp/topo/unstructured/io/detail/: exodus.hh
flsp/topo/unstructured/mesh/: coloring_functors.hh  coloring_utils.hh  types.hh
flsp/topo/unstructured/mesh/test/: coloring.cc  new.cc
flsp/topo/unstructured/util/: common.hh  factory.hh
